# FrankaControlProxy

./: .gitignore  CMakeLists.txt  P1_arm.yaml  P1_gripper.yaml  P2_arm.yaml  P2_gripper.yaml  README.md  RobotConfig copy.yaml  RobotConfig.yaml
.github/workflows/: ci.yml
include/: FrankaArmState.h  FrankaProxy.h  FrankaProxy.hpp  FrankaServer.h  FrankaState.h  RobotConfig.hpp
include/control_mode/: AbstractControlMode.h  ZeroTorqueControlMode.h  abstract_control_mode.h  control_mode_registry.h  idle_control_mode.hpp  joint_pd_test_mode.hpp  zero_torque_mode.hpp
include/control_mode.h/: ControlMode.h
include/debugger/: state_debug.hpp
include/protocol/: byte_order.hpp  codec.hpp  franka_arm_state.hpp  franka_gripper_state.hpp  message_header.hpp  mode_id.hpp  msg_id.hpp  msg_parser.hpp
src/: FrankaProxy.cpp  human_controller.cpp  main.cpp
src/control_mode/: control_mode_registry.cpp  idle_control_mode.cpp  joint_pd_test_mode.cpp  zero_torque_mode.cpp
src/debugger/: state_debug.cpp
src/protocol/: codec.cpp  franka_arm_state.cpp  franka_gripper_state.cpp  message_header.cpp  msg_parser.cpp
test/: follower_client.py  follower_interact_client.py  leader_client.py  leader_interact_client.py
